modulo 5: adiciona javascript ao projeto1

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,8 +20,11 @@
       </p>
     </header>
 
-    <section>
-      <div class="card">
+    <img scr="https://i.postimg.cc/8fS8KSGX/marielle-franco.png" alt="">
+
+
+    <section id="content">
+      <!-- <div class="card">
         <img
           src="./images/marielle-franco.png"
           alt="imagem de Marielle Franco"
@@ -171,8 +171,9 @@
               certo.</q
             >
           </blockquote>
-        </details>
+        </details> -->
       </div>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
